# matrix_worker

./: .dockerignore  .env.example  Caddyfile  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  docker-compose.yaml  just.env.example  justfile  rustfmt.toml
.sqlx/: query-05d1b156dc0f90b4248b8348688e83538c1b2b96f946062870e9d22144827342.json  query-06c711e7cb5001b31da3875686b6610889c72c80431446c410314b2cccf562cd.json  query-14c0cfc7a1adb4678d55dc22717b564b2453fc05716db2dc2fa27165bc69e8fe.json  query-514e0dba98dc98a4282959ac732f6856d031d8b41db731a5ef8887855dfe2a19.json  query-5c25c5729a61df0f7fb839c154f51ede9235501bcdb81dcacac1b57448d5faab.json  query-6b231fc2e20c207aa7a582d971ee9cdcfdd901642c8a5b5c27ff0ab3c1168464.json  query-760e45258cf7eaba3cdde3176f749e99069cb893b510809995228fb44eea47a6.json  query-7c1b1a973beb1e3293cb94460599e6b09d0dd3b53c5aa178a80f5a5eee00d2f6.json  query-89115e7ab5dc917d9d046cbac75175c9523d234a3019c142251ee0cc5027583a.json  query-a8b0540a3c4b242661c64cb1bb789004a98f52abb5f403db9f2a5b646d62e686.json  query-c91c71bbeb21da617fcc7c72e859c9aeb751da6c20e067247e914e07c0c7de22.json  query-d6376a875a3bde2f0aaf476c2adff54340a60184905e3578043437272ac065ea.json  query-dcdf5bae5a369c8ca3bc13399c620a9166bf7d7f4b59ec38a62b48d1e7a9c8db.json  query-e4b42ee1d8fd936e3878b0c85db8451ab1fabe318b73fed6ebf43aa6c9ba80ed.json
docker/lord/: .env.example
docker/lord/debug/: Dockerfile
docker/lord/release/: Dockerfile
matrix-commons/: Cargo.toml
matrix-commons/src/: lib.rs
matrix-db_manager/: Cargo.toml
matrix-db_manager/src/: err_handling.rs  guard.rs  lib.rs  macros.rs  metrics_manager.rs  mongo_manager.rs
matrix-errors/: Cargo.toml
matrix-errors/src/: lib.rs
matrix-macros/: Cargo.toml
matrix-macros/src/: lib.rs
matrix-metrics/: Cargo.toml
matrix-metrics/src/: lib.rs
matrix-mongo_manager/: Cargo.toml
matrix-mongo_manager/src/: guard.rs  hook.rs  lib.rs  macros.rs  mappings.rs  messaging.rs  user.rs
matrix-server/: Cargo.toml
matrix-server/src/: lib.rs  user.rs
matrix-server/src/messages/: mod.rs
migrations/: 20250616171549_user.up.sql  20250620074407_users.up.sql
src/: macros.rs  main.rs
src/db/: mod.rs
src/mongo/: mod.rs
src/pg/: mod.rs
src/server/: mod.rs  user.rs
