[package]
name = "matrix_worker"
version = "0.1.0"
edition = "2024"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "derive", "macros", "migrate", "uuid", "rust_decimal"] }
dotenvy = "0.15.7"
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["cors"] }
serde = { version = "1.0.219", features = ["derive"] }
mongodb = "3.2.3"
bson = "2.15.0"
uuid = { version = "1.17.0", features = ["v4"] }
