[package]
name = "matrix_worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[workspace]
resolver = "3"
members = [".", "matrix-*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[workspace.dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
axum = "0.8.4"
bson = "2.15.0"
dotenvy = "0.15.7"
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
itertools = "0.14.0"
mongodb = "3.2.4"
parking_lot = "0.12.4"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "derive", "macros", "migrate", "uuid", "rust_decimal", "chrono"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "normalize-path"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4"] }

matrix-commons = { path = "matrix-commons" }
matrix-db_manager = { path = "matrix-db_manager" }
matrix-errors = { path = "matrix-errors" }
matrix-macros = { path = "matrix-macros" }
matrix-metrics = { path = "matrix-metrics" }
matrix-mongo_manager = { path = "matrix-mongo_manager" }
matrix-server = { path = "matrix-server" }

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

matrix-commons.workspace = true
matrix-db_manager.workspace = true
matrix-metrics.workspace = true
matrix-mongo_manager.workspace = true
matrix-server.workspace = true

