[package]
name = "matrix-db_manager"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

matrix-commons.workspace = true
matrix-errors.workspace = true
matrix-macros.workspace = true
matrix-metrics.workspace = true
