[package]
name = "matrix-mongo_manager"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bson.workspace = true
mongodb.workspace = true
parking_lot.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

matrix-commons.workspace = true
matrix-errors.workspace = true
