[package]
name = "matrix-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
bson.workspace = true
chrono.workspace = true
serde.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing.workspace = true

matrix-commons.workspace = true
matrix-db_manager.workspace = true
matrix-macros.workspace = true
matrix-metrics.workspace = true
matrix-mongo_manager.workspace = true
